.yml file draft. DOES NOT WORK

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,33 +7,33 @@ sudo: required
 language: python
 
 python:
-    - "3.4"
+	- "3.4"
 
 before_install:
-    - sudo apt-get update
+	- sudo apt-get update
 
 install:
-    - pip install --upgrade pip
-    - pip install coverage
-    - pip install numpy
+	- pip install --upgrade pip
+	- pip install coverage
+	- pip install Django
 
 before_script:
-    - uname -a
-    - printenv
-    - pip3 --version
-    - pip3 freeze
-    - python3 --version
-    - coverage3 --version
-    - python3 -c "import numpy; print(numpy.__version__)"
+	- uname -a
+	- printenv
+	- pip3 --version
+	- pip3 freeze
+	- python3 --version
+	- coverage3 --version
+  #  - python3 -c "import numpy; print(numpy.__version__)"
 
 script:
-    - date
-    - ls -al
-    - touch Netflix.log
-    - make netflix-tests
-    - ls -al
-    - make Netflix.html
-    - ls -al
-    - make test
-    - ls -al
-    - make check
+	- date
+	- ls -al
+	- touch IDB.log
+	- make tests
+	- ls -al
+	- make models.html
+	- ls -al
+	- make test
+	- ls -al
+	- make check
